# locked-up

./: .gitignore  CMakeLists.txt  CMakeSettings.json  item.hpp
assets/clues/: cluespack.CLS
assets/maps/: mapfile.karol  mapfile.txt
include/: action.hpp  clue.hpp  game.hpp  game_board.hpp  game_board_loader.hpp  item.hpp  logging.hpp  notepad.hpp  player.hpp  remote_player.hpp  resource_manager.hpp  room.hpp  utils.hpp
include/entity/: player.hpp
include/items/: item.hpp
include/network/: connection.hpp  deserializer.hpp  packets.hpp  serializer.hpp  server.hpp
include/render/: animated_background_renderer.hpp  background_renderer.hpp  button_renderer.hpp  checkbox_renderer.hpp  debug_renderer.hpp  game_board_renderer.hpp  item_widget_renderer.hpp  line_edit_renderer.hpp  main_menu_background_renderer.hpp  master_widget_renderer.hpp  notification_widget_renderer.hpp  panel_renderer.hpp  player_renderer.hpp  renderer.hpp  table_widget_renderer.hpp  text_edit_renderer.hpp  text_renderer.hpp  textured_button_renderer.hpp  user_interface_renderer.hpp  visual_item_renderer.hpp  widget_container_renderer.hpp  widget_renderer.hpp
include/server/: game_manager.hpp  remote_player.hpp  server.hpp
include/state/: game_state.hpp  game_state_manager.hpp  lobby_state.hpp  main_menu_state.hpp  play_state.hpp
include/ui/: big_popup.hpp  button.hpp  checkbox.hpp  item_widget.hpp  layout.hpp  line_edit.hpp  notepad_widget.hpp  notification_widget.hpp  panel.hpp  popup.hpp  table_widget.hpp  text.hpp  text_edit.hpp  textured_button.hpp  textured_checkbox.hpp  textured_panel.hpp  user_interface.hpp  visual_item.hpp  widget.hpp  widget_container.hpp  widgets.hpp
proto/: clue_found_packet.proto  countdown_packet.proto  debug_packet.proto  disconnect_packet.proto  fake_clue_packet.proto  game_board_packet.proto  game_results_packet.proto  game_start_packet.proto  join_game_packet.proto  murderer_packet.proto  new_turn_packet.proto  packet.proto  player_move_packet.proto  player_ready_packet.proto  players_list_packet.proto  vote_packet.proto
src/: clue.cpp  game.cpp  game_board.cpp  game_board_loader.cpp  item.cpp  item.hpp  logging.cpp  main.cpp  notepad.cpp  notepad.hpp  player.cpp  player.hpp  remote_player.cpp  room.cpp  room.hpp  test.pb.cc  test.pb.h  test.proto  utils.cpp
src/entity/: player.cpp
src/items/: item.cpp
src/network/: connection.cpp  connection.hpp  deserializer.cpp  serializer.cpp  server.cpp
src/render/: animated_background_renderer.cpp  background_renderer.cpp  button_renderer.cpp  button_renderer.hpp  camera_renderer.hpp  checkbox_renderer.cpp  checkbox_renderer.hpp  debug_renderer.cpp  debug_renderer.hpp  game_board_renderer.cpp  game_board_renderer.hpp  item_widget_renderer.cpp  line_edit_renderer.cpp  renderer.hpp  (+18 more)
(+87 files in other folders)
